@@ -3,6 +3,10 @@ This file is a translation of the main russian changelog and is provided by volu
 It might not always be as up to date as the main changelog.
 =======================================================================================
 
+drkns 26.10.2018 19:48:27 +0100 - build 5296
+
+1. Forum: Visual issue with moving items between groups in Files highlighting
+
 drkns 26.10.2018 18:59.10 +0100 - build 5295
 
 1. FSF.FarClock / Far.UpTime worked incorrectly after 5080.
