@@ -1,3 +1,7 @@
+drkns 26.10.2018 19:48:27 +0100 - build 5296
+
+1. С форума: Visual issue with moving items between groups in Files highlighting
+
 drkns 26.10.2018 18:59:10 +0100 - build 5295
 
 1. После 5080 некореектно работали FSF.FarClock / Far.UpTime
